English DoliDroid ChangeLog
--------------------------------------------------------------

***** ChangeLog for 2.2 *****

2.242
- Use checkboxes to select options.
- Add support for the bookmarks pages into DoliDroid menu (need Dolibarr v15+).
- Url entry is not lost when leaving and going back on app.
- Can click on links into the About page.


***** ChangeLog for 2.1 *****

2.141
- Disable cache for the quick search page because it is not compatible with CSRF protection
- Include static resources for v12


***** ChangeLog for 2.0 *****

2.039
- FIX a not null exception if url is null

2.037-2.0.38
- FIX Hang during access on menu.

2.036
- FIX Hang on some Android 8+ when downloading
- Restore ability to use with test sites (http)

2.035
- NEW Add static resources for v11
- NEW Add warning if bad scheme (http vs https) used.
- FIX Truncation of user agent in about page

2.0.34
- Compatibility with Multicompany module
- Fix open external URL
- Include asset cache files for better performance with Dolibarr 9.0 and 10.0
- Autofix url if url start with /


***** ChangeLog for 1.9 *****
- Include asset cache files for better performance with Dolibarr 8.0
- When there is a SSL error, show the SSL error code
- When there is a SSL error, show confirm message only once
- Replace link to create instance on DoliCloud to DoliCloud v2


***** ChangeLog for 1.8 *****
- Include asset cache files for better performance with Dolibarr 7.0


***** ChangeLog for 1.7 *****
- Include asset cache files for better performance with Dolibarr 6.0
- Compatible with the permissions requests of Android 6.0 M and +


***** ChangeLog for 1.6 *****
- Include asset cache files for better performance with Dolibarr 5.0


***** ChangeLog for 1.5 *****
- Include asset cache files for better performance with Dolibarr 4.0.* and 3.9.*


***** ChangeLog for 1.4 *****
- Can upload files with Dolibarr 3.8+
- Include asset cache files for better performance with Dolibarr 3.7.* and 3.8.*

